; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_closefs.c_write_backup_super.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_closefs.c_write_backup_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.ext2_super_block = type { i32 }

@SUPERBLOCK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*, i32, i32, %struct.ext2_super_block*)* @write_backup_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @write_backup_super(%struct.TYPE_4__* %0, i32 %1, i32 %2, %struct.ext2_super_block* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.ext2_super_block*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.ext2_super_block* %3, %struct.ext2_super_block** %9, align 8
  %12 = load i32, i32* %7, align 4
  store i32 %12, i32* %11, align 4
  %13 = load i32, i32* %11, align 4
  %14 = icmp sgt i32 %13, 65535
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32 65535, i32* %11, align 4
  br label %16

16:                                               ; preds = %15, %4
  %17 = load i32, i32* %11, align 4
  %18 = call i32 @ext2fs_cpu_to_le16(i32 %17)
  %19 = load %struct.ext2_super_block*, %struct.ext2_super_block** %9, align 8
  %20 = getelementptr inbounds %struct.ext2_super_block, %struct.ext2_super_block* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = load %struct.ext2_super_block*, %struct.ext2_super_block** %9, align 8
  %23 = call i64 @ext2fs_superblock_csum_set(%struct.TYPE_4__* %21, %struct.ext2_super_block* %22)
  store i64 %23, i64* %10, align 8
  %24 = load i64, i64* %10, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %16
  %27 = load i64, i64* %10, align 8
  store i64 %27, i64* %5, align 8
  br label %37

28:                                               ; preds = %16
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @SUPERBLOCK_SIZE, align 4
  %34 = sub nsw i32 0, %33
  %35 = load %struct.ext2_super_block*, %struct.ext2_super_block** %9, align 8
  %36 = call i64 @io_channel_write_blk64(i32 %31, i32 %32, i32 %34, %struct.ext2_super_block* %35)
  store i64 %36, i64* %5, align 8
  br label %37

37:                                               ; preds = %28, %26
  %38 = load i64, i64* %5, align 8
  ret i64 %38
}

declare dso_local i32 @ext2fs_cpu_to_le16(i32) #1

declare dso_local i64 @ext2fs_superblock_csum_set(%struct.TYPE_4__*, %struct.ext2_super_block*) #1

declare dso_local i64 @io_channel_write_blk64(i32, i32, i32, %struct.ext2_super_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
